Added support for GitHub Actions (#9)
- Added support for github actions workflow
- Chrome and ChromeDriver script support
- Updated the DriverManager class
- Refactored the maven resource manager
- Bumped dependencies