@@ -7,6 +7,7 @@ import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriver;
+import org.openqa.selenium.chrome.ChromeDriverService;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.edge.EdgeDriver;
 import org.openqa.selenium.edge.EdgeOptions;
@@ -26,8 +27,8 @@ import org.springframework.stereotype.Component;
 
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.time.Duration;
 import java.util.Arrays;
@@ -47,9 +48,9 @@ public class DriverManager {
     @Autowired
     private Environment environment;
 
-    public void createDriver() throws MalformedURLException {
+    public void createDriver() throws IOException {
         if (getDriver() == null) {
-            if (Arrays.toString(this.environment.getActiveProfiles()).contains("jenkins")) {
+            if (Arrays.toString(this.environment.getActiveProfiles()).contains("cloud-provider")) {
                 setRemoteDriver(new URL(applicationProperties.getGridUrl()));
             } else {
                 setLocalWebDriver();
@@ -59,13 +60,26 @@ public class DriverManager {
         }
     }
 
-    public void setLocalWebDriver() {
+    public void setLocalWebDriver() throws IOException {
         switch (applicationProperties.getBrowser()) {
             case ("chrome") -> {
-                System.setProperty("webdriver.chrome.driver", Constants.DRIVER_DIRECTORY + "/chromedriver" + getExtension());
+//                String path = Arrays.toString(this.environment.getActiveProfiles()).contains("headless-github") ? "/usr/local/share/chromedriver-linux64" : Constants.DRIVER_DIRECTORY;
+
+                String path = Arrays.toString(this.environment.getActiveProfiles()).contains("headless-github") ?
+                        System.getProperty("user.dir") + "/src/test/resources/drivers" : Constants.DRIVER_DIRECTORY;
+                ChromeDriverService src = new ChromeDriverService.Builder()
+                        .usingDriverExecutable(new File(path + "/chromedriver" + getExtension()))
+                        .usingAnyFreePort().build();
+                src.start();
+
+                System.setProperty("webdriver.chrome.driver", path + "/chromedriver" + getExtension());
+
                 ChromeOptions options = new ChromeOptions();
                 options.addArguments("--disable-logging");
-                driverThreadLocal.set(new ChromeDriver(options));
+                options.addArguments("--no-sandbox");
+                options.addArguments("--disable-dev-shm-usage");
+                options.addArguments("--headless=new");
+                driverThreadLocal.set(new ChromeDriver(src, options));
             }
             case ("firefox") -> {
                 System.setProperty("webdriver.gecko.driver", Constants.DRIVER_DIRECTORY + "/geckodriver" + getExtension());
@@ -93,7 +107,8 @@ public class DriverManager {
             default ->
                     throw new NoSuchElementException("Failed to create an instance of WebDriver for: " + applicationProperties.getBrowser());
         }
-        driverWait.getDriverWaitThreadLocal().set(new WebDriverWait(driverThreadLocal.get(), Duration.ofSeconds(Constants.timeoutShort), Duration.ofSeconds(Constants.pollingShort)));
+        driverWait.getDriverWaitThreadLocal()
+                .set(new WebDriverWait(driverThreadLocal.get(), Duration.ofSeconds(Constants.timeoutShort), Duration.ofSeconds(Constants.pollingShort)));
     }
 
     private void setRemoteDriver(URL hubUrl) {
@@ -104,8 +119,11 @@ public class DriverManager {
                 driverThreadLocal.set(new RemoteWebDriver(hubUrl, capability));
             }
             case "chrome" -> {
-                capability = new ChromeOptions();
-                driverThreadLocal.set(new RemoteWebDriver(hubUrl, capability));
+                ChromeOptions options = new ChromeOptions();
+                options.addArguments("--no-sandbox");
+                options.addArguments("--disable-dev-shm-usage");
+                options.addArguments("--headless");
+                driverThreadLocal.set(new RemoteWebDriver(hubUrl, options));
             }
             case "ie" -> {
                 capability = new InternetExplorerOptions();
@@ -122,7 +140,8 @@ public class DriverManager {
             default ->
                     throw new NoSuchElementException("Failed to create an instance of RemoteWebDriver for: " + applicationProperties.getBrowser());
         }
-        driverWait.getDriverWaitThreadLocal().set(new WebDriverWait(driverThreadLocal.get(), Duration.ofSeconds(Constants.timeoutShort), Duration.ofSeconds(Constants.pollingShort)));
+        driverWait.getDriverWaitThreadLocal()
+                .set(new WebDriverWait(driverThreadLocal.get(), Duration.ofSeconds(Constants.timeoutShort), Duration.ofSeconds(Constants.pollingShort)));
     }
 
     public WebDriver getDriver() {
@@ -140,24 +159,28 @@ public class DriverManager {
     }
 
     public void downloadDriver() {
-        try {
-            Process process;
-            if (getOperatingSystem().equals("win")) {
-                process = Runtime.getRuntime().exec("cmd.exe /c downloadDriver.sh", null,
-                        new File(Constants.COMMON_RESOURCES));
-            } else {
-                process = Runtime.getRuntime().exec(
-                        new String[]{"sh", "-c", Constants.COMMON_RESOURCES + "/downloadDriver.sh"});
+        if (!Arrays.toString(this.environment.getActiveProfiles()).contains("headless-github")) {
+            try {
+                Process process;
+                if (getOperatingSystem().equals("win")) {
+                    process = Runtime.getRuntime().exec("cmd.exe /c downloadDriver.sh", null,
+                            new File(Constants.COMMON_RESOURCES));
+                } else if (getOperatingSystem().equals("linux")) {
+                    process = Runtime.getRuntime().exec(
+                            new String[]{"sh", "-c", Constants.COMMON_RESOURCES + "/downloadDriver.sh"});
+                } else {
+                    process = Runtime.getRuntime().exec(new String[]{"/bin/sh -c ls", Constants.COMMON_RESOURCES + "/downloadDriver.sh"});
+                }
+                process.waitFor();
+                BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+                String line = reader.readLine();
+                while (line != null) {
+                    log.debug(line);
+                    line = reader.readLine();
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
             }
-            process.waitFor();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            String line = reader.readLine();
-            while (line != null) {
-                log.debug(line);
-                line = reader.readLine();
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
         }
     }
 
